Minor - Fixed navbar collapse color

--- a/public/src/scss/drop_page.scss
+++ b/public/src/scss/drop_page.scss
@@ -1,8 +1,7 @@
 nav {
   z-index: 3;
   top: 0;
-  background-color: red;
-
+  
   .navbar-collapse {
     background-color: #333333;
   }
