--- a/public/src/scss/map_page.scss
+++ b/public/src/scss/map_page.scss
@@ -19,7 +19,7 @@ body {
   z-index: 3;
 
   .navbar-collapse {
-    background-color: #333333;
+    background-color: darken(#00a99d,10%);
   }
 }
 .nav-profile-img {
